refact: adiciona classe para melhorar a forma de retorno dos endpoints da aplicação