@@ -1,8 +1,9 @@
 package com.fiap.challenge.customers.useCases.find;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import com.fiap.challenge.shared.model.ResponseApi;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import com.fiap.challenge.customers.dto.CustomerResponseDTO;
@@ -17,10 +18,12 @@ public class FindCustomerByCpfCnpjLikeImpl implements FindCustomerByCpfCnpjLike 
 
 	private final CustomerRepository customerRepository;
 
-	public List<CustomerResponseDTO> execute(String cpfCnpj) {
+	public ResponseApi<List<CustomerResponseDTO>> execute(String cpfCnpj) {
+		ResponseApi<List<CustomerResponseDTO>> responseApi = new ResponseApi<>();
 		List<CustomerModel> customers = customerRepository.findByCpfCnpjContainingWithCustomSort(cpfCnpj);
 
-		return customers.stream()
+		return responseApi.of(HttpStatus.OK, "Clientes encontrados com sucesso",
+				customers.stream()
 				.map(customer -> new CustomerResponseDTO(
 						customer.getId(),
 						customer.getName(),
@@ -29,7 +32,6 @@ public class FindCustomerByCpfCnpjLikeImpl implements FindCustomerByCpfCnpjLike 
 						customer.getEmail(),
 						customer.getCreatedAt(),
 						customer.getUpdatedAt()
-				))
-				.collect(Collectors.toList());
+				)).toList());
 	}
 }
