@@ -2,8 +2,9 @@ package com.fiap.challenge.services.useCases.find;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import com.fiap.challenge.shared.model.ResponseApi;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import com.fiap.challenge.services.dto.ServiceResponseDTO;
@@ -19,12 +20,14 @@ public class FindServicesByIdsUseCaseImpl implements FindServicesByIdsUseCase {
     private final ServiceRepository serviceRepository;
 
     @Override
-    public List<ServiceResponseDTO> execute(List<UUID> ids) {
+    public ResponseApi<List<ServiceResponseDTO>> execute(List<UUID> ids) {
+        ResponseApi<List<ServiceResponseDTO>> responseApi = new ResponseApi<>();
         List<ServiceModel> foundServices = serviceRepository.findAllById(ids);
 
-        return foundServices.stream()
+        return responseApi.of(HttpStatus.OK, "Serviços encontrados com sucesso",
+                foundServices.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList());
     }
 
     private ServiceResponseDTO convertToDto(ServiceModel model) {
